# CodeMend

./: .gitignore  LICENSE  README.md  pyproject.toml
codemend/: main.py
