[tool.poetry]
name = "codemend"
version = "0.2.1"
description = ""
authors = ["Accord33"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
codemend = "codemend.main:main"
